# sld-resurrect

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: OmniLearn_Embeddings.ipynb  SLD_01_DataPreparation.ipynb  SLD_02_ValidationPlots.ipynb  SLD_03_Measurements.ipynb  SLD_04_OmniLearnedEmbeddings.ipynb  SLD_DataAnalysis.ipynb
src/sld_resurrect/: __init__.py  cuts.py  event_view.py  jets.py  kinematics.py  omnilearn_deprecated.py  paths.py  reduction.py  selector.py  selector_presets.py  track_quality.py
src/sld_resurrect/cli/: _main.py  download_checkpoints.py  download_dataset.py  inference.py  process_dataset.py  reduce_embeddings.py
src/sld_resurrect/datasets/: __init__.py  aleph.py  h1.py  jetclass1.py  sld.py  strategies.py
src/sld_resurrect/models/: __init__.py  checkpoints.py  inference.py  loader.py
