[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sld_resurrect"
version = "0.1.0"
description = "Modern reanalysis tooling for the SLAC Large Detector (SLD) experiment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alkaid Cheng", email = "alkaidc@stanford.edu" },
]
keywords = [
    "particle-physics",
    "high-energy-physics",
    "SLD",
    "SLAC",
    "Z-pole",
    "OmniLearn",
    "foundation-model",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

# Core analysis dependencies. The ML / OmniLearn-specific packages are
# split off into the [project.optional-dependencies] groups below so
# someone running just the data-analysis notebook doesn't have to
# install PyTorch.
dependencies = [
    "awkward>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "h5py>=3.8",
    "uproot>=5.0",
    "vector>=1.0",
    "fastjet>=3.4",
    "tqdm>=4.65",
    "requests>=2.28",
    "pyarrow>=14.0",        # parquet I/O for jazelle reader
    "aliad",                # awkward stack/pad helpers
    "quickstats",           # plotting + style
    "jazelle",              # SLD bank reader
]

[project.optional-dependencies]
# OmniLearn inference (CPU- or GPU-side). Torch wheels are platform-
# dependent; we leave version selection to the user's pip extras.
ml = [
    "torch>=2.0",
    "omnilearned",
]
# Dimensionality reduction. cuML (the GPU path in `reduction.py`) is
# pulled in via `pip install sld_resurrect[ml-gpu]`, which is a
# super-set of [ml] plus cuML's RAPIDS index.
reduce = [
    "scikit-learn>=1.3",
    "openTSNE>=1.0",
    "umap-learn>=0.5",
]
ml-gpu = [
    "torch>=2.0",
    "omnilearned",
    "scikit-learn>=1.3",
]
# Development tools.
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "nbformat>=5.9",
    "jupyterlab>=4.0",
]
# Sentinel "all" group for convenience installs.
all = [
    "sld_resurrect[ml]",
    "sld_resurrect[reduce]",
]

[project.scripts]
# Single console entry point; subcommands dispatched in cli/_main.py.
sld-resurrect = "sld_resurrect.cli._main:main"

[project.urls]
Homepage = "https://github.com/AlkaidCheng/sld_resurrect"
Documentation = "https://github.com/AlkaidCheng/sld_resurrect#readme"
Repository = "https://github.com/AlkaidCheng/sld_resurrect"
Issues = "https://github.com/AlkaidCheng/sld_resurrect/issues"

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "SIM",          # simplify
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true   # awkward / vector / fastjet / cuml are weakly typed

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"